# tes-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
docs/: operations.md
pipeline/: __init__.py  config.py  content_cleaner.py  content_generator.py  description_generator.py  drive_client.py  gcs_client.py  gemini_api_helper.py  gmail_client.py  history_store.py  html_pdf_builder.py  image_generator.py  packager.py  pdf_builder.py  personas.py  pipeline.py  topic_generator.py  utils.py  validator.py
tests/: test_config.py  test_content_cleaner.py  test_content_generator.py  test_description_generator.py  test_drive_client.py  test_gcs_client.py  test_gemini_api_helper.py  test_gmail_client.py  test_history_store.py  test_html_pdf_builder.py  test_image_generator.py  test_packager.py  test_pdf_builder.py  test_personas.py  test_pipeline.py  test_smoke.py  test_topic_generator.py  test_utils.py  test_validator.py
